# py2dgame

./: README.md  setup.cfg
src/py2dgame/: __init__.py  _base_sprite.py  _control.py  _events.py  _looks.py  _motion.py  _pen.py  _sensing.py  _sound.py  _variables.py  asking.py  assets.py  code_block.py  gui.py  monitors.py  py2dgame_support.py  sprite.py  stage.py  support.py
src/py2dgame/l10n/: api.py
