[metadata]
name = py2dgame
version = 0.0.16
author = Kai Eckert
author_email = eckert@hdm-stuttgart.de
description = 2d game with python programming
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tahakh19/py2dgame
license = MIT
project_urls =
    Bug Tracker = https://github.com/pystage/pystage/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pygame
    jinja2
    svglib

[options.packages.find]
where = src

[options.package_data]
py2dgame =
    images/*
    fonts/*
    sounds/*
